# chatbot-plugin

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-npm.yml
alembic/versions/: 002_toolbox_schema.py
docs/superpowers/plans/: 2026-06-07-chatbot-plugin-ui.md
docs/superpowers/specs/: 2026-06-07-chatbot-plugin-ui-design.md
scripts/: query.py  seed.py
src/: ARCHITECTURE.md
src/tests/llm/: test_provider_implementations.py
