[project]
name = "chatbot-plugin"
version = "0.1.0"
description = "Vector storage toolbox for scrape-and-analyze — chunk storage and retrieval"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_plugin"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
