[project]
name = "chatbot-plugin"
version = "0.3.0"
description = "OpenAI-compatible RAG chat backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "chatbot-plugin-sdk @ git+https://github.com/Teng91/chatbot-plugin-sdk.git",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_plugin"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
